# baskerville

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
baskerville_macro/: CHANGELOG.md  Cargo.toml
baskerville_macro/src/: lib.rs
benches/: 20000_default.csv  5000_default.csv  csv.rs
src/: csv.rs  field.rs  lib.rs  validators.rs
src/validators/: nullable.rs  numeric.rs  text.rs  time.rs  unique.rs
