[package]
name = "baskerville_macro"
version.workspace = true
edition = "2021"
description = "Macros for Baskerville - Infer and validate data-type schemas in Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
